<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">There is empty.</string>
    <string name="product_name">Name</string>
    <string name="hint_product_name">Product Name</string>
    <string name="editor_activity_title_edit">Edit Prodcution</string>
    <string name="editor_activity_title_add">Add a Prodcution</string>
    <string name="product_price">Price</string>
    <string name="hint_product_price">Produce Price</string>
    <string name="product_count">Count</string>
    <string name="hint_product_count">Product Count</string>
    <string name="product_supplier">Supplier</string>
    <string name="hint_product_supplier">Supplier</string>
    <string name="hint_product_supplier_tel">Supplier Tel</string>
    <string name="hint_product_supplier_email">Supplier Email</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="minus_string">-</string>
    <string name="plus_string">+</string>
    <string name="editor_insert_prod_successful">Saving successful!</string>
    <string name="editor_insert_prod_failed">Error with saving Product!</string>
    <string name="product_supplier_tel">Supplier Tel</string>
    <string name="editor_update_product_failed">Error with updating product data</string>
    <string name="editor_update_product_successful">Update data successful!</string>
    <string name="buy_button">Buy</string>
    <string name="buy_must_not_zero">The quantities of this product must bigger than 1 !</string>
    <string name="some_error_with_buy">There are some error when you buy</string>
    <string name="has_buied_one_product">You have buied one product.</string>
    <string name="name_cannot_empty">The product name is can\'t empty!</string>
    <string name="price_cannot_empty">The product price is can\'t empty!</string>
    <string name="count_cannot_empty">The product count is can\'t empty!</string>
    <string name="supplier_cannot_empty">The product supplier is can\'t empty!</string>
    <string name="supplier_email_cannot_empty">The product supplier\'s email is can\'t empty!</string>
    <string name="supplier_tel_cannot_empty">The product supplier\'s tel is can\'t empty!</string>
    <string name="delete_error">There are something wrong when you delete this item.</string>
    <string name="delete_success">Delete success!</string>
    <string name="product_supplier_email">Supplier Email</string>
    <string name="cannot_contract_supplier">Supplier does not provide contact information.</string>
    <string name="action_order">Order</string>
    <string name="delete_all">Delete All</string>
    <string name="confirm_to_delete_one">Are you sure to delete this product?</string>
    <string name="confirm_to_delete_all">Are you sure to delete all products?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
