<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price"
            android:inputType="textCapWords" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_count" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/minus_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="24sp"
                android:text="@string/minus_string"/>
            <EditText
                android:id="@+id/edit_product_count"
                style="@style/EditorFieldStyle1"
                android:hint="@string/hint_product_count"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/plus_count"
                android:paddingRight="16dp"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_string"
                />
        </LinearLayout>


        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier" />

        <EditText
            android:id="@+id/edit_produce_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier"
            android:inputType="textCapWords" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier_email" />

        <EditText
            android:id="@+id/edit_produce_supplier_email"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier_email"
            android:inputType="textCapWords" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_supplier_tel" />

        <EditText
            android:id="@+id/edit_produce_supplier_tel"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier_tel"
            android:inputType="textCapWords" />
    </LinearLayout>

</ScrollView>